deploy/operator.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rainbond-operator
  namespace: rbd-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rainbond-operator
  serviceName: rainbond-operator
  template:
    metadata:
      labels:
        name: rainbond-operator
    spec:
      serviceAccountName: rainbond-operator
      containers:
        - name: rainbond-operator
          image: abewang/rainbond-operator:v0.0.1
          command:
            - rainbond-operator
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /opt/rainbond/pkg
              name: rbd-pkg
            - mountPath: /var/run
              name: dockersock
        - name: rainbond-operator-openapi
          image: a985850124/rainbond-operator-openapi
          volumeMounts:
            - mountPath: /root/.kube/config
              name: kubecfg
            - mountPath: /opt/rainbond/pkg
              name: rbd-pkg
      volumes:
        - name: rbd-pkg
          hostPath:
            path: /opt/rainbond/pkg
            type: DirectoryOrCreate
        - name: dockersock
          hostPath:
            path: /var/run
            type: Directory
        - name: kubecfg
          hostPath: 
            path: /root/.kube/config
            type: File
