deploy/operator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: rainbond-operator
  name: rainbond-operator
  namespace: rbd-system
spec:
  ports:
    - name: http
      port: 8080
      nodePort: 30008
  selector:
    name: rainbond-operator
  type: NodePort
